# G4Simulation

./: 22Al的β叠加谱.ipynb  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.bcb2bd1  G4Simulation  README.md  cmake_install.cmake  conf.json  init_vis.mac  main.cc  mc.C  mc.h  range.cc  rebin.cc  simu.root  simu.xlsx  vis.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  MoDularPhysicsList.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RootIO.hh  RunAction.hh  SDHit.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh  dataStructure.hh  linkdef.h
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MoDularPhysicsList.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc  SDHit.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc
